syntax = "proto3";

package rivet.backend.module;

import "proto/common.proto";
import "proto/backend/module/function.proto";

// MARK: Game Version Config
message VersionConfig {	
	message ModuleDependency {
		string key = 1;
		rivet.common.Uuid module_version_id = 2;
	}

	repeated ModuleDependency module_dependencies = 1;
}

// MARK: Game Version Config Context
message VersionConfigCtx {

}

// MARK: Game Version Config Meta
message VersionConfigMeta {
	repeated rivet.common.Uuid module_instance_ids = 1;
}

// Module
message Module {
	enum Publicity {
		PRIVATE = 0;
		PUBLIC = 1;
	}

	rivet.common.Uuid module_id = 1;
	string name_id = 2;
	rivet.common.Uuid team_id = 3;
	int64 create_ts = 4;
	Publicity publicity = 5;
}

// Version
message Version {
	rivet.common.Uuid version_id = 1;
	rivet.common.Uuid module_id = 2;
	int64 create_ts = 3;

	uint64 major = 101;
	uint64 minor = 102;
	uint64 patch = 103;

	repeated rivet.backend.module.Function functions = 201;

	message Docker {
		// TODO: Auth?
		string image_tag = 1;
	}

	oneof image {
		Docker docker = 301;
	}
}
