syntax = "proto3";

package rivet.backend.pkg.module.msg.instance_create;

import "proto/common.proto";
import "proto/backend/module.proto";
import "proto/backend/module/function.proto";

/// name = "msg-module-instance-create"
/// parameters = [
/// 	{ name = "instance_id" },
/// ]
message Message {
	rivet.common.Uuid instance_id = 1;
	rivet.common.Uuid module_version_id = 2;

	message Dummy {

	}

	message Fly {

	}

	oneof driver {
		Dummy dummy = 101;
		Fly fly = 102;
	};
}
